watchdog ChangeLog
Carlos Rueda - MMI/MBARI

2010-08-05
	- Overall code re-organization and several interface/class renamings as preparation 
	  to incorporate conversion of other vocabularies.
	
2010-07-25
	- better report about contents of input vocabulary.
	
	- CfConverterSkosApi: TOP_CONCEPT = "parameter" (previously, "Standard_Name")
	  "Standard_Name" is not generated at all.
	  Note that CfConverterJena does generate "Standard_Name" as subClassOf skos:Concept.
	  
	- Tested some queries like the following:
	
	  Get concepts that are narrower than cf:parameter:
	
		PREFIX skos: <http://www.w3.org/2004/02/skos/core#>
		PREFIX cf: <http://mmisw.org/ont/cf/parameter/>
		SELECT ?narrower
		WHERE { cf:parameter skos:narrower ?narrower }
		LIMIT 10	
	  
	  Get CF parameters with canonical units "kg m-2"
	  
		PREFIX skos: <http://www.w3.org/2004/02/skos/core#>
		PREFIX cf: <http://mmisw.org/ont/cf/parameter/>
		PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>
		SELECT ?parameter  ?description
		WHERE { ?parameter cf:canonical_units "kg m-2".
		        ?parameter rdfs:comment ?description .
		}
		LIMIT 10	
	  
	
2010-07-24
	Registration:
	- org.mmisw.watchdog.orr.RegisterOntology: Adapted from mmiorr-client-demo.
	  It allows to register the generated ontology in the MMI ORR (or other ORR deployment).
	  To execute this step, the password of the submitting ORR user should be given:
	     ... --password <ORR user password> ...

	NOTE: The skosapi-based generation is causing problems to ORR (the Jena-based code used at ORR
	is hanging while processing the skosapi-based ontology.  SO, I'm making "jena" the default
	implementation for the conversion here.  This is unfortunate; the whole thing has made me
	spend a lot of time in debugging.
	
	NOTE 2:  Registration is failing!  ORR has only accepted direct registration in RE-HOSTED mode;
	I made some quick changes to accept FULLY-HOSTED but this would require a more exhaustive
	revision in the ORR module.
	