@@ -1,0 +1,22 @@
+package org.mmisw.watchdog.onts.sweet;
+
+import org.mmisw.watchdog.Watchdog.IProgram;
+
+/**
+ * Main program dispatch registration of SWEET ontologies.
+ * 
+ * <p>
+ * TODO   	NOT IMPLEMENTED YET
+ * 
+ * @author Carlos Rueda
+ */
+public class Sweet implements IProgram {
+
+	public void run(String[] args) throws Exception {
+		// TODO 
+		
+		throw new UnsupportedOperationException(getClass().getSimpleName()+ " program NOT IMPLEMENTED YET");
+		
+	}
+	
+}
