@@ -1,0 +1,29 @@
+package org.mmisw.watchdog.onts.udunits.jena;
+
+import org.mmisw.watchdog.conversion.BaseConverter;
+
+
+/**
+ * UDUnits conversion implementation based on Jena.
+ * 
+ * <p>
+ * TODO   	NOT IMPLEMENTED
+ * 
+ * @author Carlos Rueda
+ */
+public class UdunitsConverterJena extends BaseConverter {
+
+	@Override
+	protected void _doConvert() throws Exception {
+		// TODO Auto-generated method stub
+		
+	}
+
+	@Override
+	protected void _doSave() throws Exception {
+		// TODO Auto-generated method stub
+		
+	}
+	
+
+}
